--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2295,7 +2295,7 @@ header .icon.circled {
 
 #header {
   position: relative;
-  background-image: url('../../images/header.jpg');
+  background-image: url('../../images/code2.jpg');
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -2318,6 +2318,9 @@ header .icon.circled {
   margin: 0;
   display: inline-block;
   vertical-align: middle;
+  font-weight: bold;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
 }
 
 #header header {
@@ -2420,6 +2423,7 @@ body.homepage.is-preload #header:after {
   height: 21px;
   border-left: solid 1px rgba(192, 192, 192, 0.35);
   border-right: solid 1px rgba(192, 192, 192, 0.35);
+  font-weight: bold;
 }
 
 #nav > ul:before,
