select preferred background image for homepage and project showcase headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2295,7 +2295,7 @@ header .icon.circled {
 
 #header {
   position: relative;
-  background-image: url('../../images/code2.jpg');
+  background-image: url('../../images/rsz_setup.jpg');
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
